--- a/docker-compose/nginx/nginx.conf
+++ b/docker-compose/nginx/nginx.conf
@@ -12,6 +12,10 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    client_max_body_size 32M;
+
+    # Enhance a little security in case people knock on my door
+    server_tokens off;
 
     access_log  /var/log/nginx/access.log;
     # Switch logging to console out to view via Docker
