--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -6,8 +6,10 @@ services:
       context:
         ./certbot
     volumes:
-      - ./certbot/conf/:/etc/letsencrypt
+      - ../volumes/certbot/:/etc/letsencrypt
       - ../web-root/letsencrypt:/var/www/letsencrypt
+    depends_on:
+      - nginx
   nginx:
     build:
       context:
@@ -17,10 +19,10 @@ services:
       - "443:443"
     volumes:
       - ../web-root:/var/www:ro
+      - ../volumes/certbot:/etc/letsencrypt:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/sites/:/etc/nginx/sites-available:ro
       - ./nginx/conf.d/:/etc/nginx/conf.d:ro
-      - ./certbot/conf:/etc/letsencrypt:ro
     restart: always
     depends_on:
       - php-fpm
@@ -28,13 +30,13 @@ services:
     build:
       context: ./php-fpm
     volumes:
-      - ../web-root:/var/www:ro
+      - ../web-root:/var/www
     restart: always
   database:
     build:
       context: ./database
     volumes:
-      - ./database/files:/var/lib/mysql
+      - ../volumes/database:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=primary
       - MYSQL_USER=some_user_name
