--- a/docker-compose/nginx/sites/default.conf
+++ b/docker-compose/nginx/sites/default.conf
@@ -1,41 +1,15 @@
 server {
-
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
-
-    server_name localhost;
-    root /var/www;
-    index index.php index.html index.htm;
-
-    # TODO: You need to change 'example.com' to the name of your LE certs
-    # After running docker-compose once, uncomment these lines
-    #listen 443 ssl;
-    #ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    #ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    listen 80;
+    listen [::]:80;
+    server_name _;
 
     location / {
-         try_files $uri $uri/ /index.php$is_args$args;
-    }
-
-    location ~ \.php$ {
-        try_files $uri /index.php =404;
-        fastcgi_pass php-upstream;
-        fastcgi_index index.php;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        #fixes timeouts
-        fastcgi_read_timeout 600;
-        include fastcgi_params;
-    }
-
-    location ~ /\.ht {
-        deny all;
+        return 301 https://$host$request_uri;
     }
 
     location /.well-known/acme-challenge/ {
         root /var/www/letsencrypt/;
         log_not_found off;
     }
-}
 
+}
