Make space for two different web roots

--- a/docker-compose/nginx/sites/example.ca.conf
+++ b/docker-compose/nginx/sites/example.ca.conf
@@ -1,6 +1,6 @@
 server {
     server_name example.ca;
-    root /var/www/example;
+    root /var/www/example.ca;
     index index.php index.html index.htm;
 
     listen 443 ssl;
