--- a/docker-compose/nginx/sites/example.com.conf
+++ b/docker-compose/nginx/sites/example.com.conf
@@ -1,6 +1,6 @@
 server {
     server_name example.com;
-    root /var/www/example;
+    root /var/www/example.com;
     index index.php index.html index.htm;
 
     listen 443 ssl;
