Disallow php-fmp from ever starting as root

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       context: ./php-fpm
     volumes:
       - ../web-root:/var/www
+    user: www-root
     restart: always
   database:
     build:
