--- a/docker-compose/nginx/sites/example.com.conf
+++ b/docker-compose/nginx/sites/example.com.conf
@@ -14,6 +14,7 @@ server {
     location ~ \.php$ {
         try_files $uri /index.php =404;
         fastcgi_pass php-upstream;
+        fastcgi_hide_header X-Powered-By;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
