Change nginx to listen on 8080 so we can run as an untrusted user

--- a/docker-compose/nginx/sites/default.conf
+++ b/docker-compose/nginx/sites/default.conf
@@ -1,7 +1,10 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 8080;
+    listen [::]:8080;
     server_name _;
+
+    index index.html index.htm;
+    try_files $uri $uri/ =404;
 
     location / {
         return 301 https://$host$request_uri;
@@ -11,5 +14,4 @@ server {
         root /var/www/letsencrypt/;
         log_not_found off;
     }
-
 }
