Work around an error when running nginx as non-root

--- a/docker-compose/nginx/nginx.conf
+++ b/docker-compose/nginx/nginx.conf
@@ -20,11 +20,17 @@ http {
     # Increase TLS security
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    
-    access_log  /var/log/nginx/access.log;
+
+
     # Switch logging to console out to view via Docker
-    #access_log /dev/stdout;
-    #error_log /dev/stderr;
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+
+    # Because docker will be running all of nginx as a regular user
+    # we'll need to bind to 8080 and 4433. That means the directs for
+    # URIs without a trailing slash will break (sends the client the
+    # port number in the redirect). This parameter turns that off
+    port_in_redirect on;
 
     sendfile        on;
     keepalive_timeout  65;
