Moved certbot config to use env vars

--- a/docker-compose/certbot/Dockerfile
+++ b/docker-compose/certbot/Dockerfile
@@ -1,4 +1,7 @@
 FROM certbot/certbot
 
-ENTRYPOINT certbot certonly --agree-tos --expand --webroot --webroot-path /var/www/letsencrypt --email user@example.com -d example.com,example.ca
+ARG ADMIN_MAIL
+ARG DOMAIN_LIST
+
+ENTRYPOINT certbot certonly --agree-tos --expand --webroot --webroot-path /var/www/letsencrypt --email $ADMIN_MAIL -d $DOMAIN_LIST
 
