--- a/web-hosting/docker-compose.yml
+++ b/web-hosting/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         ./certbot
     volumes:
       - ../volumes/certbot/:/etc/letsencrypt
-      - ../web-root/letsencrypt:/var/www/letsencrypt
+      - $WEB_ROOT/letsencrypt:/var/www/letsencrypt
     depends_on:
       - nginx
   nginx:
@@ -18,7 +18,7 @@ services:
       - "80:8080"
       - "443:4433"
     volumes:
-      - ../web-root:/var/www:ro
+      - $WEB_ROOT:/var/www:ro
       - ../volumes/certbot:/etc/letsencrypt:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/sites/:/etc/nginx/sites-available:ro
@@ -32,7 +32,7 @@ services:
     expose:
       - "9000"      
     volumes:
-      - ../web-root:/var/www
+      - $WEB_ROOT:/var/www
     user: www-data
     restart: always
   database:
